--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI="mongodb+srv://karthikamovva:karthika@cluster0.5ypfr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="secret"
